--- a/themes/best-challenge/style.css
+++ b/themes/best-challenge/style.css
@@ -520,37 +520,6 @@ a {
   text-align: right;
   width: 50%; }
 
-@media (min-width: 600px) {
-  .menu-item {
-    width: 107px;
-    height: 36px;
-    bottom: 0; }
-    .menu-item a {
-      padding-top: 7px;
-      color: #fff; }
-  .menu-item:hover {
-    background-color: #5a6f83;
-    border-top-left-radius: 18.5px;
-    border-top-right-radius: 18.5px; }
-  .menu-item-51,
-  .menu-item-51:hover {
-    margin-left: 5px;
-    width: 189px;
-    height: 36px;
-    border-radius: 18.5px;
-    background-color: #a6ce39; }
-    .menu-item-51 a,
-    .menu-item-51:hover a {
-      color: #303b46; }
-  .main-navigation ul ul a {
-    width: 100%;
-    padding: 0.75rem; } }
-
-.sub-menu .menu-item:hover {
-  background-color: #5a6f83;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0; }
-
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -596,6 +565,8 @@ a {
     @media (min-width: 600px) {
       .logo-date .event-date h2 {
         margin-top: 0; } }
+    .logo-date .event-date .mobile-logo {
+      max-width: 25vw; }
     .logo-date .event-date .logo-header {
       padding-top: 1vh; }
       .logo-date .event-date .logo-header img {
@@ -605,18 +576,6 @@ a {
           .logo-date .event-date .logo-header img {
             height: 40px;
             width: 276px; } }
-
-/* hide mobile version by default */
-.logo .mobile {
-  display: none; }
-
-/* when screen is less than 600px wide
-     show mobile version and hide desktop */
-@media (max-width: 600px) {
-  .logo .mobile {
-    display: block; }
-  .logo .desktop {
-    display: none; } }
 
 .header-nav {
   width: 100%; }
@@ -630,11 +589,82 @@ a {
 #primary-menu {
   width: 100%;
   -ms-flex-direction: column;
-      flex-direction: column; }
+      flex-direction: column;
+  height: 50vh;
+  background: #5a6f83;
+  -ms-flex-align: start;
+      align-items: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-transform: uppercase;
+  padding-left: 5%; }
   @media (min-width: 600px) {
     #primary-menu {
+      display: -ms-flexbox;
+      display: flex;
       -ms-flex-direction: row;
           flex-direction: row; } }
+
+.menu-item {
+  width: 107px;
+  height: 36px;
+  bottom: 0; }
+  .menu-item a {
+    padding-top: 7px;
+    color: #fff; }
+
+.menu-item:hover {
+  background-color: #5a6f83;
+  border-top-left-radius: 18.5px;
+  border-top-right-radius: 18.5px; }
+
+@media (min-width: 600px) {
+  #primary-menu {
+    height: auto;
+    background: none;
+    -ms-flex-align: left;
+        align-items: left;
+    -ms-flex-pack: start;
+        justify-content: flex-start;
+    text-transform: none; }
+  .menu-item {
+    width: 107px;
+    height: 36px;
+    bottom: 0; }
+    .menu-item a {
+      padding-top: 7px;
+      color: #fff; }
+  .menu-item:hover {
+    background-color: #5a6f83;
+    border-top-left-radius: 18.5px;
+    border-top-right-radius: 18.5px; }
+  .menu-item-51,
+  .menu-item-51:hover {
+    margin-left: 5px;
+    width: 189px;
+    height: 36px;
+    border-radius: 18.5px;
+    background-color: #a6ce39; }
+    .menu-item-51 a,
+    .menu-item-51:hover a {
+      color: #303b46; }
+  .main-navigation ul ul a {
+    width: 100%;
+    padding: 0.75rem; } }
+
+.sub-menu .menu-item:hover {
+  background-color: #5a6f83;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0; }
+
+.stickyBar {
+  width: 100%;
+  position: relative; }
+
+.stickyIsFixed {
+  position: fixed;
+  top: 0;
+  left: 0; }
 
 .title-wrapper {
   margin: 0;
@@ -672,6 +702,18 @@ a {
       margin: 67px auto;
       font-size: 20px;
       width: 70%; } }
+
+/* hide mobile version by default */
+.logo .mobile {
+  display: none; }
+
+/* when screen is less than 600px wide
+     show mobile version and hide desktop */
+@media (max-width: 600px) {
+  .logo .mobile {
+    display: block; }
+  .logo .desktop {
+    display: none; } }
 
 /*--------------------------------------------------------------
 # Accessibility
